just checking out

--- a/RL4.ipynb
+++ b/RL4.ipynb
@@ -122,6 +122,204 @@
    "source": [
     "env = 'CartPole-v0'\n",
     "# env = gym.make('CartPole-v0')\n",
+    "def vpg_load(env_fn, path, actor_critic=core.ActorCritic, ac_kwargs=dict(), seed=0, \n",
+    "        steps_per_epoch=1000, epochs=50, gamma=0.99, pi_lr=3e-4,\n",
+    "        vf_lr=1e-3, train_v_iters=80, lam=0.97, max_ep_len=1000,\n",
+    "        tb=SummaryWriter(), save_freq=10):\n",
+    "    \n",
+    "    # Random seed\n",
+    "    torch.manual_seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    \n",
+    "    # Instantiate environment\n",
+    "    env = env_fn()\n",
+    "    obs_dim = env.observation_space.shape\n",
+    "    act_dim = env.action_space.shape\n",
+    "    env.reset()\n",
+    "    env.render()\n",
+    "    \n",
+    "    def get_screen(env):                             \n",
+    "        # Returned screen requested by gym is 400x600x3, but is sometimes larger\n",
+    "        # such as 800x1200x3. Transpose it into torch order (CHW).\n",
+    "        # time.sleep(2)\n",
+    "        # env = env()\n",
+    "        screen = env.render(mode='rgb_array')\n",
+    "        screen  = screen.transpose((2, 0, 1))\n",
+    "        # screen = env.render(mode='rgb_array').transpose((2, 0, 1))\n",
+    "        # Cart is in the lower half, so strip off the top and bottom of the screen\n",
+    "        _, screen_height, screen_width = screen.shape\n",
+    "        screen = screen[:, int(screen_height*0.4):int(screen_height * 0.8)]\n",
+    "        view_width = int(screen_width * 0.6)\n",
+    "        def get_cart_location(screen_width):\n",
+    "            world_width = env.x_threshold * 2\n",
+    "            scale = screen_width / world_width\n",
+    "            return int(env.state[0] * scale + screen_width / 2.0)  # MIDDLE OF CART\n",
+    "        cart_location = get_cart_location(screen_width)\n",
+    "        if cart_location < view_width // 2:\n",
+    "            slice_range = slice(view_width)\n",
+    "        elif cart_location > (screen_width - view_width // 2):\n",
+    "            slice_range = slice(-view_width, None)\n",
+    "        else:\n",
+    "            slice_range = slice(cart_location - view_width // 2,\n",
+    "                                cart_location + view_width // 2)\n",
+    "        # Strip off the edges, so that we have a square image centered on a cart\n",
+    "        screen = screen[:, :, slice_range]\n",
+    "        # Convert to float, rescale, convert to torch tensor\n",
+    "        # (this doesn't require a copy)\n",
+    "        screen = np.ascontiguousarray(screen, dtype=np.float32) / 255\n",
+    "        screen = torch.from_numpy(screen)\n",
+    "        # Resize, and add a batch dimension (BCHW)\n",
+    "        resize = T.Compose([T.ToPILImage(),\n",
+    "                        T.Resize(40, interpolation=InterpolationMode.BICUBIC),\n",
+    "                        T.ToTensor()])\n",
+    "        return resize(screen).unsqueeze(0)\n",
+    "\n",
+    "    _, c, h, w = get_screen(env).shape\n",
+    "\n",
+    "    # Create actor-critic module\n",
+    "    ac = actor_critic(c, h, w, env.action_space, **ac_kwargs)\n",
+    "    \n",
+    "    var_counts = {module[0]:core.count_vars(module[1]) for module in [['Pi', ac.pi], ['V', ac.v]]}\n",
+    "    tb.add_scalars('Number of parameters', var_counts, 1)\n",
+    "\n",
+    "    # Set up experience buffer\n",
+    "    local_steps_per_epoch = int(steps_per_epoch)\n",
+    "    buf = VPGBuffer(obs_dim, c, h, w, act_dim, local_steps_per_epoch, gamma, lam)\n",
+    "\n",
+    "    # Set up function for computing VPG policy loss\n",
+    "    def compute_loss_pi(data):\n",
+    "        frames, obs, act, adv, logp_old = data['frames'], data['obs'], data['act'], data['adv'], data['logp']\n",
+    "\n",
+    "        # Policy loss\n",
+    "        pi, logp = ac.pi(frames, act)\n",
+    "        loss_pi = -(logp * adv).mean()\n",
+    "\n",
+    "        # Useful extra info\n",
+    "        approx_kl = (logp_old - logp).mean().item()\n",
+    "        ent = pi.entropy().mean().item()\n",
+    "        pi_info = dict(kl=approx_kl, ent=ent)\n",
+    "        \n",
+    "        return loss_pi, pi_info\n",
+    "\n",
+    "    # Set up function for computing value loss\n",
+    "    def compute_loss_v(data):\n",
+    "        frames, obs, ret = data['frames'], data['obs'], data['ret']\n",
+    "        return ((ac.v(frames) - ret)**2).mean()\n",
+    "\n",
+    "    # Set up optimizers for policy and value function\n",
+    "    pi_optimizer = opt.Adam(ac.pi.parameters(), lr=pi_lr)\n",
+    "    vf_optimizer = opt.Adam(ac.v.parameters(), lr=vf_lr)\n",
+    "\n",
+    "    def update(epoch):\n",
+    "        data = buf.get()\n",
+    "\n",
+    "        # Get loss and info values before update\n",
+    "        pi_l_old, pi_info_old = compute_loss_pi(data)\n",
+    "        pi_l_old = pi_l_old.item()\n",
+    "        v_l_old = compute_loss_v(data).item()\n",
+    "\n",
+    "        # Train policy with a single step of gradient descent\n",
+    "        pi_optimizer.zero_grad()\n",
+    "        loss_pi, pi_info = compute_loss_pi(data)\n",
+    "        loss_pi.backward()\n",
+    "        pi_optimizer.step()\n",
+    "\n",
+    "        # Value function learning\n",
+    "        for i in range(train_v_iters):\n",
+    "            vf_optimizer.zero_grad()\n",
+    "            loss_v = compute_loss_v(data)\n",
+    "            loss_v.backward()\n",
+    "            vf_optimizer.step()\n",
+    "\n",
+    "        kl, ent = pi_info['kl'], pi_info_old['ent']\n",
+    "        info = dict(LossPi=pi_l_old, LossV=v_l_old,\n",
+    "                    KL=kl, Entropy=ent,\n",
+    "                    DeltaLossPi=(loss_pi.item() - pi_l_old),\n",
+    "                    DeltaLossV=(loss_v.item() - v_l_old))\n",
+    "        tb.add_scalars('Info', info, epoch)\n",
+    "\n",
+    "    def generate_gif(env, filename, T=200):\n",
+    "        frames2 = []\n",
+    "        s_t = env.reset()\n",
+    "        reward = 0\n",
+    "        for t in range(T):\n",
+    "            # a_t = agent.act(s_t)\n",
+    "            frame2 = get_screen()\n",
+    "            # action_probs = ac.pi(torch.FloatTensor(frame)).detach().numpy().squeeze()\n",
+    "            a2, v2, logp2 = ac.step(frame)\n",
+    "            # action_probs = model(torch.FloatTensor(frame)).detach().numpy().squeeze()\n",
+    "            # print(action_probs)\n",
+    "            # action_probs = [0.5, 0.5]\n",
+    "            # action = np.random.choice(env.action_space, p=action_probs)\n",
+    "            s_2, r2, done2, info2 = env.step(a2[0])\n",
+    "            # s_t, r_t, d_t, _ = env.step(action)\n",
+    "            frame_2 = env.render(mode='rgb_array')\n",
+    "            frames2.append(frame_2)\n",
+    "            reward2 += r2\n",
+    "            if done2:\n",
+    "                break\n",
+    "        print(reward2)\n",
+    "        images_list = [Image.fromarray(frame2) for frame2 in frames2]\n",
+    "        imageio.mimsave(f'{filename}.gif', frames2, duration=0.02)\n",
+    "\n",
+    "    # Prepare for interaction with environment\n",
+    "    frame, o, ep_ret, ep_len = get_screen(env), env.reset(), 0, 0\n",
+    "    ep_no = 0\n",
+    "    # Main loop: collect experience in env and update/log each epoch\n",
+    "    for epoch in tqdm(range(epochs)):\n",
+    "        for t in tqdm(range(local_steps_per_epoch)):\n",
+    "            a, v, logp = ac.step(torch.as_tensor(frame, dtype=torch.float32))\n",
+    "\n",
+    "            next_o, r, d, _ = env.step(a[0])\n",
+    "            frame_ = get_screen(env)\n",
+    "            ep_ret += r\n",
+    "            ep_len += 1\n",
+    "\n",
+    "            # save and log\n",
+    "            buf.store(frame, o, a, r, v, logp)\n",
+    "            tb.add_scalar('VVals', v, epoch*local_steps_per_epoch+t)\n",
+    "            # Update obs (critical!)\n",
+    "            o = next_o\n",
+    "            frame = frame_\n",
+    "\n",
+    "            timeout = ep_len == max_ep_len\n",
+    "            terminal = d or timeout\n",
+    "            epoch_ended = t==local_steps_per_epoch-1\n",
+    "\n",
+    "            if terminal or epoch_ended:\n",
+    "                if epoch_ended and not(terminal):\n",
+    "                    print('Warning: trajectory cut off by epoch at %d steps.'%ep_len, flush=True)\n",
+    "                # if trajectory didn't reach terminal state, bootstrap value target\n",
+    "                if timeout or epoch_ended:\n",
+    "                    _, v, _ = ac.step(torch.as_tensor(frame, dtype=torch.float32))\n",
+    "                else:\n",
+    "                    v = 0\n",
+    "                buf.finish_path(v)\n",
+    "                if terminal:\n",
+    "                    ep_no+=1\n",
+    "                    # only save EpRet / EpLen if trajectory finished\n",
+    "                    ep_data = dict(EpRet=ep_ret, EpLen=ep_len)\n",
+    "                    tb.add_scalars('Episode data', ep_data, ep_no)\n",
+    "                frame, o, ep_ret, ep_len = get_screen(env), env.reset(), 0, 0\n",
+    "\n",
+    "\n",
+    "        # Save model\n",
+    "        if (epoch % save_freq == 0) or (epoch == epochs-1):\n",
+    "            torch.save(ac, './RL4_spinning_vpg')\n",
+    "\n",
+    "        # Perform VPG update!\n",
+    "        update(epoch)\n",
+    "        generate_gif(env, './RL4_spinning_vpg_gifs/%d.gif'%epoch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = 'CartPole-v0'\n",
+    "# env = gym.make('CartPole-v0')\n",
     "def vpg(env_fn, actor_critic=core.ActorCritic, ac_kwargs=dict(),  seed=0, \n",
     "        steps_per_epoch=1000, epochs=50, gamma=0.99, pi_lr=3e-4,\n",
     "        vf_lr=1e-3, train_v_iters=80, lam=0.97, max_ep_len=1000,\n",
@@ -309,14 +507,12 @@
     "\n",
     "        # Perform VPG update!\n",
     "        update(epoch)\n",
-    "        generate_gif(env, './RL4_spinning_vpg_gifs/%d.gif'%epoch)\n",
-    "\n",
-    "        "
+    "        generate_gif(env, './RL4_spinning_vpg_gifs/%d.gif'%epoch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,12 +1599,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_screen(env):                             \n",
+    "    # Returned screen requested by gym is 400x600x3, but is sometimes larger\n",
+    "    # such as 800x1200x3. Transpose it into torch order (CHW).\n",
+    "    # time.sleep(2)\n",
+    "    # env = env()\n",
+    "    screen = env.render(mode='rgb_array')\n",
+    "    screen  = screen.transpose((2, 0, 1))\n",
+    "    # screen = env.render(mode='rgb_array').transpose((2, 0, 1))\n",
+    "    # Cart is in the lower half, so strip off the top and bottom of the screen\n",
+    "    _, screen_height, screen_width = screen.shape\n",
+    "    screen = screen[:, int(screen_height*0.4):int(screen_height * 0.8)]\n",
+    "    view_width = int(screen_width * 0.6)\n",
+    "    def get_cart_location(screen_width):\n",
+    "        world_width = env.x_threshold * 2\n",
+    "        scale = screen_width / world_width\n",
+    "        return int(env.state[0] * scale + screen_width / 2.0)  # MIDDLE OF CART\n",
+    "    cart_location = get_cart_location(screen_width)\n",
+    "    if cart_location < view_width // 2:\n",
+    "        slice_range = slice(view_width)\n",
+    "    elif cart_location > (screen_width - view_width // 2):\n",
+    "        slice_range = slice(-view_width, None)\n",
+    "    else:\n",
+    "        slice_range = slice(cart_location - view_width // 2,\n",
+    "                            cart_location + view_width // 2)\n",
+    "    # Strip off the edges, so that we have a square image centered on a cart\n",
+    "    screen = screen[:, :, slice_range]\n",
+    "    # Convert to float, rescale, convert to torch tensor\n",
+    "    # (this doesn't require a copy)\n",
+    "    screen = np.ascontiguousarray(screen, dtype=np.float32) / 255\n",
+    "    screen = torch.from_numpy(screen)\n",
+    "    # Resize, and add a batch dimension (BCHW)\n",
+    "    resize = T.Compose([T.ToPILImage(),\n",
+    "                    T.Resize(40, interpolation=InterpolationMode.BICUBIC),\n",
+    "                    T.ToTensor()])\n",
+    "    return resize(screen).unsqueeze(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env2 = gym.make(env)\n",
+    "env2.reset()\n",
+    "_, c, h, w = get_screen(env2).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ac = torch.load(\"./RL4_spinning_vpg.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import imageio\n",
     "from PIL import Image\n",
+    "\n",
     "\n",
     "def generate_gif(env, filename, T=200):\n",
     "    frames = []\n",
@@ -1416,7 +1676,7 @@
     "    reward = 0\n",
     "    for t in range(T):\n",
     "        # a_t = agent.act(s_t)\n",
-    "        frame = get_screen()\n",
+    "        frame = get_screen(env)\n",
     "        # action_probs = ac.pi(torch.FloatTensor(frame)).detach().numpy().squeeze()\n",
     "        a, v, logp = ac.step(frame)\n",
     "        # action_probs = model(torch.FloatTensor(frame)).detach().numpy().squeeze()\n",
@@ -1434,6 +1694,30 @@
     "    images_list = [Image.fromarray(frame) for frame in frames]\n",
     "    imageio.mimsave(f'{filename}.gif', frames, duration=0.02)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_gif(env2, \"demo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
